# android_mbedtls

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
